# dictionary

./: .env  Cargo.toml  Dockerfile  docker-compose.yaml
migrations/: 20250219194025_create-tables.down.sql  20250219194025_create-tables.up.sql
src/: error.rs  lib.rs  main.rs  model.rs
src/app/: mod.rs  routes.rs
src/repository/: mod.rs
templates/: error.askama.html  index.askama.html  styles.css  word.askama.html  words.askama.html
